fixed htacces and class noauth

--- a/.env
+++ b/.env
@@ -40,12 +40,12 @@
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = qrcepta
-database.default.username = postgres
+database.default.database = qrcepta-pre
+database.default.username = root
 database.default.password = root
-database.default.DBDriver = postgre
+database.default.DBDriver = MySQLi
 database.default.DBPrefix =
-database.default.port = 5432
+database.default.port = 3306
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4_test
